--- a/unpackaged/main/default/classes/SFAnonymizationProcessWrapper.cls
+++ b/unpackaged/main/default/classes/SFAnonymizationProcessWrapper.cls
@@ -2,7 +2,7 @@ public class SFAnonymizationProcessWrapper {
     @InvocableVariable(required = false)
     public String separator;
     @InvocableVariable(required = false)
-    public String timeStamp;
+    public Long timeStamp;
     @InvocableVariable(required = false)
     public String clientIdStr;
     @InvocableVariable(required = false)
