--- a/unpackaged/main/default/translations/th.translation-meta.xml
+++ b/unpackaged/main/default/translations/th.translation-meta.xml
@@ -26,4 +26,16 @@
             <name>Cases</name>
         </sections>
     </reportTypes>
+    <customLabels>
+        <label>ผลิตภัณฑ์</label>
+        <name>LABS_AP_Product</name>
+    </customLabels>
+    <customLabels>
+        <label>ซ่อมแซม</label>
+        <name>LABS_AP_Repair</name>
+    </customLabels>
+    <customLabels>
+        <label>การแจ้งเตือนการนัดหมาย</label>
+        <name>LABS_AP_Task_Subject_BookingReminder</name>
+    </customLabels>
 </Translations>
