--- a/unpackaged/main/default/translations/cs.translation-meta.xml
+++ b/unpackaged/main/default/translations/cs.translation-meta.xml
@@ -37,6 +37,14 @@
         <name>Invoice_Url_Prefix</name>
     </customLabels>
     <customLabels>
+        <label><!-- LABS_AP_Product --></label>
+        <name>LABS_AP_Product</name>
+    </customLabels>
+    <customLabels>
+        <label><!-- LABS_AP_Repair --></label>
+        <name>LABS_AP_Repair</name>
+    </customLabels>
+    <customLabels>
         <label><!-- LABS_AP_Role_ASM --></label>
         <name>LABS_AP_Role_ASM</name>
     </customLabels>
