--- a/unpackaged/main/default/translations/ko.translation-meta.xml
+++ b/unpackaged/main/default/translations/ko.translation-meta.xml
@@ -37,6 +37,14 @@
         <name>Invoice_Url_Prefix</name>
     </customLabels>
     <customLabels>
+        <label>제품</label>
+        <name>LABS_AP_Product</name>
+    </customLabels>
+    <customLabels>
+        <label>수리</label>
+        <name>LABS_AP_Repair</name>
+    </customLabels>
+    <customLabels>
         <label><!-- LABS_AP_Role_ASM --></label>
         <name>LABS_AP_Role_ASM</name>
     </customLabels>
@@ -89,7 +97,7 @@
         <name>LABS_AP_Task_Subject_BookingDateModified</name>
     </customLabels>
     <customLabels>
-        <label><!-- LABS_AP_Task_Subject_BookingReminder --></label>
+        <label>방문 예약 알림 아웃리치</label>
         <name>LABS_AP_Task_Subject_BookingReminder</name>
     </customLabels>
     <customLabels>
