--- a/unpackaged/main/default/classes/TNP_001_QueueableCallOut.cls
+++ b/unpackaged/main/default/classes/TNP_001_QueueableCallOut.cls
@@ -1,26 +1,35 @@
 public class TNP_001_QueueableCallOut implements Queueable,Database.AllowsCallouts{
     public String source ;
     public String Action ;   
-    public list<Account> listAccount;  
-    public String CLASS_NAME = 'TNP_001_QueueableCallOut' ;  
+    public list<Account> listAccount;
+    //EBU
+    private integer iteratorElementsInListAccount = 0, iSizeOfInputAccountList;
+    public String CLASS_NAME = 'TNP_001_QueueableCallOut' ;
+    
     public TNP_001_QueueableCallOut(List<Account> listAccount,String source, string Action){
-        this.listAccount = listAccount;  
+        this.listAccount = listAccount;
+        this.iSizeOfInputAccountList = listAccount.size(); //EBU store the initial size of the input list
         this.Action = Action;
         this.source = source;
     }
     
     public void execute(QueueableContext context) {
-        String METHOD_NAME = 'sendRequest' ;
+        String METHOD_NAME = 'executeQueueable' ;
         try { 
             System.debug(CLASS_NAME+ '/' + METHOD_NAME +'/'+ 'START'); 
             System.debug(CLASS_NAME+ '/' + METHOD_NAME +'/'+ 'Source'+source);
             System.debug(CLASS_NAME+ '/' + METHOD_NAME +'/'+ 'Action'+Action);
+            
             Map<Id,User> mapInfoUser = TNP_002_ServiceClass.returnMapUserIntegration();
             String JSONGenerated;
             list <CountryCode__c> listCountryCode = [Select Name,Alpha_3_code__c,Alpha_2_code__c from  CountryCode__c ];
             
             if (Action.equalsIgnoreCase(Label.TNP_CL_AfterInsert) && String.isEmpty(Source)){
                 System.debug(CLASS_NAME+ '/' + METHOD_NAME +'/'+ 'listAccount.size'+listAccount.size());
+                
+                // EBU Correction code TNP to allow a list to be processed
+                iteratorElementsInListAccount++;
+                
                 for (Account acc : listAccount ){
                     User user = mapInfoUser.get(acc.CreatedById);
                     System.debug(CLASS_NAME+ '/' + METHOD_NAME +'/'+ 'Action in Queueable'+Action);
@@ -28,11 +37,11 @@ public class TNP_001_QueueableCallOut implements Queueable,Database.AllowsCallou
                     System.debug(CLASS_NAME+ '/' + METHOD_NAME +'/'+ 'AfterInsert'); 
                     if(user != null ){
                         if ( user.Name == Label.SFSC_Integration_User  ){
-                            JSONGenerated = TNP_002_ServiceClass.GenerateJSON(acc,Label.SFSC_Source,listCountryCode );//source 'SFSC'     
+                            JSONGenerated = TNP_002_ServiceClass.GenerateJSON(acc,Label.SFSC_Source,listCountryCode ); //source 'SFSC'     
                         }
                     }
                     if(user == null ){
-                        JSONGenerated = TNP_002_ServiceClass.GenerateJSON(acc,Label.SFDC_Source,listCountryCode );//source 'SFDC'       
+                        JSONGenerated = TNP_002_ServiceClass.GenerateJSON(acc,Label.SFDC_Source,listCountryCode ); //source 'SFDC'       
                     }
                 }
                 
@@ -65,8 +74,19 @@ public class TNP_001_QueueableCallOut implements Queueable,Database.AllowsCallou
                 }
             }
             if (String.isNotEmpty(JSONGenerated)){
+                system.debug('TNP_001_QueueableCallOut - SEND if JSON not empty (l69) - '+JSONGenerated);
                 TNP_002_ServiceClass.sendRequest(JSONGenerated);
             }
+            
+            //EBU Chain queuable to be able to handle the rest of the list
+            if (iteratorElementsInListAccount < iSizeOfInputAccountList) {
+               listAccount.remove(listAccount.size()-1);
+               system.debug(CLASS_NAME + '/' + 'ENQUEUE JOB FROM WITHIN SAME CLASS - IDX : '+ iteratorElementsInListAccount +' out of '+iSizeOfInputAccountList);
+               system.debug(CLASS_NAME + '/' + 'ENQUEUE JOB FROM WITHIN SAME CLASS - LST : '+ listAccount);
+               ID jobID = System.enqueueJob(new TNP_001_QueueableCallOut(listAccount,source,Action)); 
+               system.debug(CLASS_NAME + '/' + 'ENQUEUE JOB FROM WITHIN SAME CLASS - JOBID : '+ String.ValueOf(jobId) );
+            }
+            
             
             System.debug(CLASS_NAME+ '/' + METHOD_NAME +'/'+ 'END'); 
         } catch(Exception e) { 
